--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -199,3 +199,5 @@ jobs:
         run: cargo build -p e14_slash_commands
       - name: 'Build example 15'
         run: cargo build -p e15_simple_dashboard
+      - name: 'Build example 16'
+        run: cargo build -p e16_sqlite_database
