--- a/Makefile.toml
+++ b/Makefile.toml
@@ -324,3 +324,22 @@ args = ["make", "run_example", "e15_simple_dashboard"]
 [tasks.dev_build_15]
 command = "cargo"
 args = ["make", "build_example", "e15_simple_dashboard"]
+
+[tasks.16]
+alias = "run_16"
+
+[tasks.run_16]
+command = "cargo"
+args = ["make", "run_example_release", "e16_sqlite_database"]
+
+[tasks.build_16]
+command = "cargo"
+args = ["make", "build_example_release", "e16_sqlite_database"]
+
+[tasks.dev_run_16]
+command = "cargo"
+args = ["make", "run_example", "e16_sqlite_database"]
+
+[tasks.dev_build_16]
+command = "cargo"
+args = ["make", "build_example", "e16_sqlite_database"]
