--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,10 @@ optional = true
 version = "1.0.130"
 features = ["derive"]
 
+[dependencies.url]
+version = "^2.1"
+features = ["serde"]
+
 [dependencies.uwl]
 optional = true
 version = "0.6.0"
@@ -112,11 +116,6 @@ version = "0.9.2"
 [dependencies.typemap_rev]
 optional = true
 version = "0.1.3"
-
-[dependencies.url]
-optional = true
-version = "^2.1"
-features = ["serde"]
 
 [dependencies.bytes]
 optional = true
@@ -200,8 +199,8 @@ collector = ["gateway", "model"]
 client = ["http", "typemap_rev"]
 extras = []
 framework = ["client", "model", "utils"]
-gateway = ["flate2", "http", "url", "utils"]
-http = ["url"]
+gateway = ["flate2", "http", "utils"]
+http = []
 absolute_ratelimits = ["http"]
 model = ["builder", "http"]
 voice-model = ["serenity-voice-model"]
