--- a/examples/e09_create_message_builder/Cargo.toml
+++ b/examples/e09_create_message_builder/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2018"
 [dependencies]
 serenity = { path = "../../", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
-chrono = "0.4.10"
+chrono = { version = "0.4.10", default-features = false, features = ["clock"] }
