--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,3 +1,4 @@
+edition = "2018"
 unstable_features = true
 use_small_heuristics = "Max"
 # Turn on once the rustfmt supporting these becomes available on rustup
