--- a/Cargo.toml
+++ b/Cargo.toml
@@ -166,6 +166,9 @@ optional = true
 version = "0.2"
 package = "http"
 
+[dev-dependencies.serde_test]
+version = "1"
+
 [dev-dependencies.tokio-test]
 version = "0.4"
 
