--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
           - no default features
           - no cache
           - no gateway
+          - time
           - unstable Discord API features
           - rustls tokio 0.2
           - native-tls tokio 0.2
@@ -44,6 +45,8 @@ jobs:
             features: default_no_backend rustls_backend simd-json
           - name: no gateway
             features: model http rustls_backend
+          - name: time
+            features: time
           - name: unstable Discord API features
             features: default unstable_discord_api
             dont-test: true
@@ -105,7 +108,7 @@ jobs:
         uses: Swatinem/rust-cache@v1
 
       - name: Check
-        run: cargo check --all-features
+        run: cargo check --features collector,unstable_discord_api
 
   min_versions:
     name: Check minimal versions
