--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,11 @@ version = "0.6.0"
 optional = true
 version = "0.13"
 
+[dependencies.time]
+optional = true
+version = "0.3.6"
+features = ["formatting", "parsing", "serde-well-known"]
+
 [dependencies.chrono]
 default-features = false
 features = ["clock", "serde"]
