--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,37 +155,37 @@ jobs:
       - name: Cache
         uses: Swatinem/rust-cache@v1
 
-      - name: 'Build example 1'
-        run: cargo build -p e01_basic_ping_bot
-      - name: 'Build example 2'
-        run: cargo build -p e02_transparent_guild_sharding
-      - name: 'Build example 3'
-        run: cargo build -p e03_struct_utilities
-      - name: 'Build example 4'
-        run: cargo build -p e04_message_builder
-      - name: 'Build example 5'
-        run: cargo build -p e05_command_framework
-      - name: 'Build example 6'
-        run: cargo build -p e06_sample_bot_structure
-      - name: 'Build example 7'
-        run: cargo build -p e07_env_logging
-      - name: 'Build example 8'
-        run: cargo build -p e08_shard_manager
-      - name: 'Build example 9'
-        run: cargo build -p e09_create_message_builder
-      - name: 'Build example 10'
-        run: cargo build -p e10_collectors
-      - name: 'Build example 11'
-        run: cargo build -p e11_gateway_intents
-      - name: 'Build example 12'
-        run: cargo build -p e12_global_data
-      - name: 'Build example 13'
-        run: cargo build -p e13_parallel_loops
-      - name: 'Build example 14'
-        run: cargo build -p e14_slash_commands
-      - name: 'Build example 15'
-        run: cargo build -p e15_simple_dashboard
-      - name: 'Build example 16'
-        run: cargo build -p e16_sqlite_database
-      - name: 'Build example 17'
-        run: cargo build -p e17_message_components
+      - name: 'Check example 1'
+        run: cargo check -p e01_basic_ping_bot
+      - name: 'Check example 2'
+        run: cargo check -p e02_transparent_guild_sharding
+      - name: 'Check example 3'
+        run: cargo check -p e03_struct_utilities
+      - name: 'Check example 4'
+        run: cargo check -p e04_message_builder
+      - name: 'Check example 5'
+        run: cargo check -p e05_command_framework
+      - name: 'Check example 6'
+        run: cargo check -p e06_sample_bot_structure
+      - name: 'Check example 7'
+        run: cargo check -p e07_env_logging
+      - name: 'Check example 8'
+        run: cargo check -p e08_shard_manager
+      - name: 'Check example 9'
+        run: cargo check -p e09_create_message_builder
+      - name: 'Check example 10'
+        run: cargo check -p e10_collectors
+      - name: 'Check example 11'
+        run: cargo check -p e11_gateway_intents
+      - name: 'Check example 12'
+        run: cargo check -p e12_global_data
+      - name: 'Check example 13'
+        run: cargo check -p e13_parallel_loops
+      - name: 'Check example 14'
+        run: cargo check -p e14_slash_commands
+      - name: 'Check example 15'
+        run: cargo check -p e15_simple_dashboard
+      - name: 'Check example 16'
+        run: cargo check -p e16_sqlite_database
+      - name: 'Check example 17'
+        run: cargo check -p e17_message_components
