Replace the `actions-rs` GitHub actions with equivalent commands
The `actions-rs` GitHub actions are not really maintained and don't add
anything special compared to the plain commands.

This also adds the problem matchers from `hecrj/setup-rust-action` to
surface warnings and errors prominently in the GitHub UI.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,12 +59,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install toolchain
-        id: tc
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: ${{ matrix.toolchain || 'stable' }}
-          profile: minimal
-          override: true
+        run: |
+          rustup install --profile minimal ${{ matrix.toolchain || 'stable' }}
+          rustup override set ${{ matrix.toolchain || 'stable' }}
+
+      - name: Add problem matchers
+        shell: bash
+        run: echo "::add-matcher::.github/matchers/rust.json"
 
       - name: Cache
         uses: Swatinem/rust-cache@v1
@@ -97,12 +98,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install toolchain (${{ env.minrust }})
-        id: tc
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: ${{ env.minrust }}
-          profile: minimal
-          override: true
+        run: |
+          rustup install --profile minimal ${{ env.minrust }}
+          rustup override set ${{ env.minrust }}
+
+      - name: Add problem matchers
+        run: echo "::add-matcher::.github/matchers/rust.json"
 
       - name: Cache
         uses: Swatinem/rust-cache@v1
@@ -119,12 +120,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install toolchain
-        id: tc
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly
-          profile: minimal
-          override: true
+        run: |
+          rustup install --profile minimal nightly
+          rustup override set nightly
+
+      - name: Add problem matchers
+        run: echo "::add-matcher::.github/matchers/rust.json"
 
       - name: Cache
         uses: Swatinem/rust-cache@v1
@@ -145,12 +146,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install toolchain
-        id: tc
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          profile: minimal
-          override: true
+        run: rustup install stable
+
+      - name: Add problem matchers
+        run: echo "::add-matcher::.github/matchers/rust.json"
 
       - name: Cache
         uses: Swatinem/rust-cache@v1
