--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,10 @@ version = "0.6.0"
 optional = true
 version = "0.13"
 
+[dependencies.levenshtein]
+optional = true
+version = "1.0.5"
+
 [dependencies.time]
 optional = true
 version = "0.3.6"
@@ -199,7 +203,7 @@ http = []
 absolute_ratelimits = ["http"]
 model = ["builder", "http"]
 voice-model = ["serenity-voice-model"]
-standard_framework = ["framework", "uwl", "command_attr", "static_assertions"]
+standard_framework = ["framework", "uwl", "levenshtein", "command_attr", "static_assertions"]
 unstable_discord_api = []
 utils = ["base64"]
 voice = ["client", "model"]
