--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ members = ["examples/*"]
 [dependencies]
 bitflags = "1.3"
 serde_json = "1.0.75"
+serde-value = "0.7"
 async-trait = "0.1.9"
 
 [dependencies.simd-json]
