--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ keywords = ["discord", "api"]
 license = "ISC"
 name = "serenity"
 readme = "README.md"
-repository = "https://github.com/serenity-rs/serenity.git"
+repository = "https://github.com/nxg-org/serenity.git"
 version = "0.10.10"
 edition = "2018"
 include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md", "build.rs"]
