--- a/Cargo.toml
+++ b/Cargo.toml
@@ -126,6 +126,11 @@ features = ["std"]
 [dependencies.percent-encoding]
 version = "2.1"
 
+[dependencies.moka]
+version = "0.8"
+features = ["dash"]
+optional = true
+
 [dev-dependencies.http_crate]
 version = "0.2"
 package = "http"
@@ -144,7 +149,7 @@ default_native_tls_tokio_0_2 = ["default_no_backend", "native_tls_tokio_0_2_back
 default_no_backend = ["builder", "cache", "client", "framework", "gateway", "model", "http", "standard_framework", "utils"]
 
 builder = ["utils"]
-cache = []
+cache = ["moka"]
 collector = ["gateway", "model"]
 client = ["http", "typemap_rev"]
 extras = []
