--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,6 +6,9 @@ on:
       - current
       - next
 
+env:
+  rust-nightly: nightly-2022-03-22
+
 jobs:
   docs:
     name: Publish docs
@@ -15,10 +18,10 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v2
 
-      - name: Install toolchain
+      - name: Install toolchain (${{ env.rust_nightly }})
         run: |
-          rustup install --profile minimal nightly
-          rustup override set nightly
+          rustup install --profile minimal ${{ env.rust_nightly }}
+          rustup override set ${{ env.rust_nightly }}
 
       - name: Cache
         uses: Swatinem/rust-cache@v1
