--- a/Cargo.toml
+++ b/Cargo.toml
@@ -160,7 +160,7 @@ default_no_backend = [
 ]
 
 builder = ["utils"]
-cache = ["moka", "dashmap", "parking_lot"]
+cache = ["dashmap", "parking_lot"]
 collector = ["gateway", "model"]
 client = ["http", "typemap_rev"]
 extras = []
@@ -177,6 +177,9 @@ voice = ["client", "model"]
 
 # Enables simd accelerated parsing
 simdjson = ["simd-json"]
+
+# Enables temporary caching in functions that retrieve data via the HTTP API.
+tempcaching = ["cache", "moka"]
 
 # Backends to pick from:
 # - Rustls Backends
