Make chrono a default optional feature
This allows users to ignore warnings from cargo audit as
non-optional dependencies cannot be removed.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,8 @@ jobs:
             features: model http rustls_backend
           - name: time
             features: time
+          - name: chrono
+            features: chrono
           - name: unstable Discord API features
             features: default unstable_discord_api
             dont-test: true
