--- a/Cargo.toml
+++ b/Cargo.toml
@@ -163,6 +163,7 @@ standard_framework = ["framework", "uwl", "command_attr", "static_assertions"]
 unstable_discord_api = []
 utils = ["base64"]
 voice = ["client", "model"]
+tokio_task_builder = ["tokio/tracing"]
 
 # Backends to pick from:
 # - Rustls Backends
