Switch to `tokio-tungstenite`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,9 +84,7 @@ optional = true
 optional = true
 version = "1.1"
 
-[dependencies.async-tungstenite]
-default-features = false
-features = ["tokio-runtime"]
+[dependencies.tokio-tungstenite]
 optional = true
 version = "0.17"
 
@@ -192,7 +190,7 @@ temp_cache = ["cache", "moka"]
 # - Rustls Backends
 rustls_backend = [
     "reqwest/rustls-tls",
-    "async-tungstenite/tokio-rustls-webpki-roots",
+    "tokio-tungstenite/rustls-tls-webpki-roots",
     "tokio",
     "bytes",
 ]
@@ -200,7 +198,7 @@ rustls_backend = [
 # - Native TLS Backends
 native_tls_backend = [
     "reqwest/native-tls",
-    "async-tungstenite/tokio-native-tls",
+    "tokio-tungstenite/native-tls",
     "tokio",
     "bytes",
 ]
