--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
           # see: jobs.nightly
           # - nightly
           - Windows
+          - native-tls
           - no default features
           - no cache
           - no gateway
@@ -33,6 +34,8 @@ jobs:
             toolchain: beta
           - name: Windows
             os: windows-latest
+          - name: native-tls
+            features: default_native_tls
           - name: no default features
             features: " "
           - name: no cache
