--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -3,7 +3,7 @@ unstable_features = true
 use_small_heuristics = "Max"
 # Turn on once the rustfmt supporting these becomes available on rustup
 # width_heuristics = "Max"
-# imports_granularity = "Module"
+imports_granularity = "Module"
 group_imports = "StdExternalCrate"
 imports_layout = "HorizontalVertical"
 struct_lit_single_line = false
