Fix compile errors in builders when the `model` feature is disabled (#1931)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,12 @@ jobs:
           - name: unstable Discord API features
             features: default unstable_discord_api
             dont-test: true
+          - name: builder without model
+            features: builder
+            dont-test: true
+          - name: unstable Discord API (no default features)
+            features: unstable_discord_api
+            dont-test: true
 
     steps:
       - name: Checkout sources
