Make no-cache client depend on dashmap still

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -167,7 +167,7 @@ default_no_backend = [
 builder = ["utils"]
 cache = ["dashmap", "parking_lot"]
 collector = ["gateway", "model"]
-client = ["http", "typemap_rev"]
+client = ["http", "typemap_rev", "dashmap"]
 extras = []
 framework = ["client", "model", "utils"]
 gateway = ["flate2", "http", "utils"]
