Update `moka` to 0.9 (#2037)
From its change log: 
> When using experimental `dash` cache, opting out of `sync` will reduce the number of dependencies.

Co-authored-by: nickelc <constantin.nickel@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -117,7 +117,8 @@ features = ["std"]
 version = "2.1"
 
 [dependencies.moka]
-version = "0.8"
+version = "0.9"
+default-features = false
 features = ["dash"]
 optional = true
 
