Use nougat to get rid of nightly requirement

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,10 @@ serde_json = "1.0.75"
 serde-value = "0.7"
 async-trait = "0.1.9"
 
+[dependencies.nougat]
+git = "https://github.com/danielhenrymantilla/nougat.rs.git"
+optional = true
+
 [dependencies.derive-where]
 version = "1.0.0-rc.3"
 optional = true
@@ -170,7 +174,7 @@ default_no_backend = [
 
 builder = ["utils"]
 cache = ["dashmap", "parking_lot"]
-collector = ["gateway", "model", "derive-where"]
+collector = ["gateway", "model", "derive-where", "nougat"]
 client = ["http", "typemap_rev"]
 extras = []
 framework = ["client", "model", "utils"]
