--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ serde-value = "0.7"
 async-trait = "0.1.9"
 
 [dependencies.nougat]
-git = "https://github.com/danielhenrymantilla/nougat.rs.git"
+version = "0.2.0"
 optional = true
 
 [dependencies.derivative]
