Constify some functions that could be used in const

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ serde_json = "1.0.75"
 serde-value = "0.7"
 async-trait = "0.1.9"
 
+[dependencies.rustversion]
+version = "1.0.7"
+
 [dependencies.simd-json]
 version = "0.4.14"
 optional = true
