Make standard framework configurable at runtime (#1950)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -176,7 +176,7 @@ http = []
 absolute_ratelimits = ["http"]
 model = ["builder", "http"]
 voice-model = ["serenity-voice-model"]
-standard_framework = ["framework", "uwl", "levenshtein", "command_attr", "static_assertions"]
+standard_framework = ["framework", "uwl", "levenshtein", "command_attr", "static_assertions", "parking_lot"]
 unstable_discord_api = []
 utils = ["base64"]
 voice = ["client", "model"]
