Revert "Clean up dispatch and unnecessary clones in client (#2019)"
This reverts commit de05e5bb3a99b45010b5aa2ebaa64a32db2d2e97 because it
broke shard code to the point where it just crashes, preventing from
even a simple ping-pong bot from running.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -176,7 +176,7 @@ default_no_backend = [
 builder = ["utils"]
 cache = ["dashmap", "parking_lot"]
 collector = ["gateway", "model", "derivative", "nougat"]
-client = ["http", "typemap_rev", "dashmap"]
+client = ["http", "typemap_rev"]
 extras = []
 framework = ["client", "model", "utils"]
 gateway = ["flate2", "http", "utils"]
